--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,9 @@
 .bg-soft-orange {
   background-color: #FFB500; }
 
+.bg-highlight-yellow {
+  background: #FEFF7C; }
+
 .c-white {
   color: #FFFFFF; }
 
@@ -137,16 +140,28 @@ h3 {
   display: table; }
 
 .table-cell {
-  display: table-cell;
+  display: inline-block;
   height: 100%; }
+  @media (min-width: 800px) {
+    .table-cell {
+      display: table-cell !important; } }
 
 .align-bottom {
   position: absolute;
   bottom: 0;
   left: 0; }
 
+.align-middle {
+  vertical-align: middle !important; }
+
 .c-center {
   margin: 0 auto; }
+
+.t-right {
+  text-align: left; }
+  @media (min-width: 800px) {
+    .t-right {
+      text-align: right; } }
 
 label {
   display: block;
@@ -441,6 +456,13 @@ section {
   vertical-align: top;
   width: 50%; }
 
+.third-col {
+  position: relative;
+  width: 100%; }
+  @media (min-width: 800px) {
+    .third-col {
+      width: 33%; } }
+
 .right-gutter {
   padding-right: 1.25em; }
 
@@ -521,15 +543,15 @@ section {
   min-width: 164px;
   background: #11C26F;
   padding: 1em 1.5em;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease; }
+  -moz-transition: ease 0.3s;
+  -o-transition: ease 0.3s;
+  -webkit-transition: ease 0.3s;
+  transition: ease 0.3s; }
   .green-btn:hover {
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+    -moz-transition: ease 0.3s;
+    -o-transition: ease 0.3s;
+    -webkit-transition: ease 0.3s;
+    transition: ease 0.3s;
     -webkit-filter: brightness(110%);
     filter: brightness(110%); }
 
@@ -553,6 +575,17 @@ section {
 
 .c-cyan.dashed-gray-btn {
   color: #009FFF !important; }
+
+.dashed-blue-btn {
+  max-width: 140px;
+  color: #009FFF;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border: 2px dashed #009FFF;
+  font-weight: bold;
+  width: 100%;
+  padding: 10px; }
 
 .remove-gray-btn {
   position: relative;
@@ -594,6 +627,16 @@ section {
 
 .small-rounded-btn.bg-green.inactive {
   background-color: #8DEDCA; }
+
+.small-yellow-rounded-btn {
+  color: #FFFFFF;
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  font-weight: bold;
+  background: #FFB500;
+  padding: 0.1em 0.9em;
+  font-size: 10px; }
 
 .white-border-small-btn {
   color: #FFFFFF;
@@ -664,6 +707,37 @@ section {
 .dark-purple-opacity-btn {
   color: rgba(41, 36, 78, 0.4);
   font-weight: bold; }
+
+.serif-txt-btn {
+  color: #FFFFFF;
+  font-size: 14px;
+  font-family: "PT Serif", serif; }
+
+.white-opacity-txt-btn {
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: bold;
+  padding: 0 1.5em; }
+
+.bg-white-rounded-btn {
+  background: #FFFFFF;
+  color: #29244E;
+  font-weight: bold;
+  -moz-border-radius: 2em;
+  -webkit-border-radius: 2em;
+  border-radius: 2em;
+  padding: 1em 1.5em; }
+
+.question-mark-btn {
+  border: 2px solid rgba(41, 36, 78, 0.4);
+  -moz-border-radius: 22px;
+  -webkit-border-radius: 22px;
+  border-radius: 22px;
+  line-height: 0;
+  color: rgba(41, 36, 78, 0.4);
+  font-weight: bold;
+  font-size: 14px;
+  height: 22px;
+  width: 22px; }
 
 .bg-white-close-btn {
   -moz-border-radius: 100%;
@@ -751,12 +825,23 @@ section {
   border-radius: 30px;
   height: 30px;
   width: 30px;
-  line-height: 30px;
+  line-height: 25px;
   font-size: 24px;
   display: inline-block;
   background-color: #009FFF;
   font-weight: bold;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  -moz-transition: ease 0.3s;
+  -o-transition: ease 0.3s;
+  -webkit-transition: ease 0.3s;
+  transition: ease 0.3s; }
+  .bg-blue-add-btn:hover {
+    -moz-transition: ease 0.3s;
+    -o-transition: ease 0.3s;
+    -webkit-transition: ease 0.3s;
+    transition: ease 0.3s;
+    -webkit-filter: brightness(110%);
+    filter: brightness(110%); }
 
 .bg-gray-add-btn {
   -moz-border-radius: 30px;
@@ -774,7 +859,163 @@ section {
 .bg-green .bg-gray-add-btn {
   color: #11C26F !important; }
 
+.menu-icon-btn {
+  padding: 0; }
+  .menu-icon-btn img {
+    height: 18px; }
+
+.circle-progress-bar {
+  position: relative;
+  display: inline-block;
+  color: #FFFFFF; }
+  .circle-progress-bar .bg-glow {
+    box-shadow: 0 0 1em rgba(50, 213, 154, 0.3);
+    height: 36px;
+    width: 36px;
+    left: 12px;
+    top: 12px;
+    position: absolute;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    border-radius: 100%; }
+  .circle-progress-bar .bg-customer-img {
+    background-image: url("../img/icon-customer.png");
+    background-repeat: no-repeat;
+    background-size: 16px;
+    background-position: center 21px; }
+  .circle-progress-bar .bg-expert-img {
+    background-image: url("../img/icon-expert.png");
+    background-repeat: no-repeat;
+    background-size: 16px;
+    background-position: center 21px; }
+  .circle-progress-bar #svg {
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg); }
+  .circle-progress-bar #svg circle {
+    stroke-dashoffset: 0;
+    transition: stroke-dashoffset 1s linear;
+    stroke: rgba(255, 255, 255, 0.1);
+    stroke-width: 3px; }
+  .circle-progress-bar #svg #bar {
+    stroke: #11C26F; }
+  .circle-progress-bar #cont {
+    margin: 0 auto;
+    border-radius: 100%;
+    position: relative;
+    height: 62px;
+    width: 62px; }
+
+.progress-bar-wrap {
+  display: inline-block;
+  text-align: center;
+  color: #FFFFFF; }
+
+.progress-bar {
+  margin-bottom: 16px;
+  background-color: rgba(255, 255, 255, 0.3);
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  height: 26px;
+  width: 209px; }
+  .progress-bar p {
+    line-height: 1.8em; }
+  .progress-bar .b-radius-left {
+    -moz-border-radius-topleft: 50px;
+    -webkit-border-top-left-radius: 50px;
+    border-top-left-radius: 50px;
+    -moz-border-radius-bottomleft: 50px;
+    -webkit-border-bottom-left-radius: 50px;
+    border-bottom-left-radius: 50px; }
+  .progress-bar .b-radius-right {
+    -moz-border-radius-topright: 50px;
+    -webkit-border-top-right-radius: 50px;
+    border-top-right-radius: 50px;
+    -moz-border-radius-bottomright: 50px;
+    -webkit-border-bottom-right-radius: 50px;
+    border-bottom-right-radius: 50px; }
+  .progress-bar .bg-green {
+    height: 26px;
+    float: left;
+    box-shadow: 0 0 1em rgba(50, 213, 154, 0.4);
+    background-color: #11C26F; }
+  .progress-bar .bg-transparent {
+    float: left;
+    height: 26px;
+    background-color: transparent; }
+  .progress-bar .bg-red {
+    float: left;
+    box-shadow: 0 0 1em rgba(252, 3, 94, 0.4);
+    background-color: #E95454;
+    height: 26px; }
+  .progress-bar .bg-blue {
+    float: left;
+    box-shadow: 0 0 1em rgba(0, 159, 255, 0.4);
+    background-color: #009FFF;
+    height: 26px; }
+
 /* ELEMENTS */
+header {
+  background: #29244E;
+  color: #FFFFFF;
+  float: left;
+  padding: 1.25em 0;
+  width: 100%;
+  margin-bottom: 2.5em; }
+  header a {
+    color: #FFFFFF; }
+  header .logo {
+    display: inline-block;
+    margin-right: 1.25em; }
+  header .breadcrumbs {
+    display: inline-block; }
+    header .breadcrumbs li {
+      display: inline-block; }
+    header .breadcrumbs li:after {
+      content: ">";
+      color: rgba(255, 255, 255, 0.4);
+      margin: 0 10px; }
+    header .breadcrumbs li:last-child:after {
+      content: ""; }
+  header .nav-tools {
+    text-align: right; }
+    header .nav-tools li {
+      margin-right: 30px;
+      vertical-align: middle;
+      display: inline-block; }
+  header .profile-btn {
+    font-weight: bold;
+    color: #FFFFFF; }
+    header .profile-btn .bg-img {
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      margin-left: 20px;
+      -moz-border-radius: 40px;
+      -webkit-border-radius: 40px;
+      border-radius: 40px;
+      height: 40px;
+      width: 40px;
+      display: inline-block;
+      position: absolute;
+      top: -4px; }
+  header .menu-icon-btn {
+    vertical-align: bottom; }
+
+footer {
+  background: #29244E;
+  color: #FFFFFF;
+  float: left;
+  width: 100%;
+  padding: 1.875em 0; }
+  footer .three-col, footer .third-col {
+    float: left; }
+  @media (min-width: 800px) {
+    footer .pr-100 {
+      padding-right: 6.25em; } }
+
 .hypothesis-modal {
   position: relative;
   width: 913px;
@@ -807,10 +1048,10 @@ section {
   height: 390px; }
   .hypothesis-specs .txt-content ul li {
     display: inline-block;
-    margin-bottom: 1.25em;
-    margin-left: 1.25em; }
+    margin-bottom: 1.25em; }
   .hypothesis-specs .txt-content li:before {
-    content: "•"; }
+    content: "•";
+    padding-right: 7px; }
   .hypothesis-specs .specs-wrap {
     max-width: 640px; }
 
@@ -986,3 +1227,194 @@ ul.color-picker-list {
     border-radius: 3px;
     height: 1.375em;
     width: 1.375em; }
+
+.canvas-grid {
+  width: 100%;
+  display: inline-block;
+  margin-bottom: 2.5em;
+  position: relative;
+  color: rgba(41, 36, 78, 0.4);
+  border: 1px solid #F0F0F0; }
+  .canvas-grid .bg-blue-add-btn {
+    -moz-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    right: 10px;
+    top: 250px;
+    right: -15px;
+    top: 300px;
+    z-index: 1; }
+  .canvas-grid .hover-col {
+    -moz-box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.5);
+    color: #FFFFFF;
+    border: 4px solid #009FFF;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2; }
+    .canvas-grid .hover-col .bg-cyan {
+      height: 100%;
+      padding: 1.25em;
+      background-color: rgba(0, 159, 255, 0.9); }
+    .canvas-grid .hover-col button {
+      color: #009FFF !important;
+      width: 80%;
+      max-width: 140px;
+      bottom: 20px;
+      position: absolute;
+      left: 15px; }
+  .canvas-grid .col {
+    float: left;
+    width: 100%;
+    position: relative; }
+  .canvas-grid .cell {
+    position: relative;
+    border: 1px solid #F0F0F0;
+    height: 176px;
+    width: 100%; }
+  .canvas-grid .cell .dashed-blue-btn {
+    margin: 0 auto;
+    width: 90%;
+    display: block;
+    font-size: 12px;
+    opacity: 0;
+    -moz-transition: ease 0.3s;
+    -o-transition: ease 0.3s;
+    -webkit-transition: ease 0.3s;
+    transition: ease 0.3s; }
+  .canvas-grid .cell:hover .dashed-blue-btn {
+    opacity: 1;
+    -moz-transition: ease 0.3s;
+    -o-transition: ease 0.3s;
+    -webkit-transition: ease 0.3s;
+    transition: ease 0.3s; }
+  .canvas-grid .col-x2, .canvas-grid .col-x2 .cell {
+    height: auto; }
+  .canvas-grid .col-x2 .cell .bottom {
+    height: auto; }
+  .canvas-grid .horizontal-x2 {
+    width: 100%; }
+  .canvas-grid .cell .top {
+    padding: 10px;
+    margin-bottom: 1.25em; }
+  .canvas-grid .cell .bottom {
+    height: 105px; }
+  .canvas-grid .cell .count {
+    color: rgba(41, 36, 78, 0.4);
+    position: absolute;
+    right: 10px;
+    top: 4px;
+    font-size: 10px; }
+  .canvas-grid .cell .count:before {
+    content: url("../img/icon-small-chat.png");
+    position: absolute;
+    left: -14px;
+    top: 2px; }
+  .canvas-grid .cell .count.active {
+    color: #009FFF; }
+  .canvas-grid .cell .count.active:before {
+    content: url("../img/icon-small-chat-blue.png"); }
+  .canvas-grid .listed-hypothesis {
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 20px;
+    position: relative;
+    padding-left: 10px;
+    margin-bottom: 1.2em;
+    width: 100%; }
+  .canvas-grid .listed-hypothesis.active {
+    color: #29244E; }
+  .canvas-grid .listed-hypothesis:before {
+    content: "";
+    height: 100%;
+    width: 5px;
+    left: 0;
+    position: absolute; }
+  .canvas-grid .tag {
+    padding-left: 14px; }
+  .canvas-grid .orange-tag.listed-hypothesis:before {
+    background-color: #FF9000; }
+  .canvas-grid .light-blue-tag.listed-hypothesis:before {
+    background-color: #6BC7FF; }
+  .canvas-grid .blue-tag.listed-hypothesis:before {
+    background-color: #5475E9; }
+  .canvas-grid .red-tag.listed-hypothesis:before {
+    background-color: #E95454; }
+  .canvas-grid .purple-tag.listed-hypothesis:before {
+    background-color: #B676EC; }
+  .canvas-grid .yellow-tag.listed-hypothesis:before {
+    background-color: #FFEF00; }
+  .canvas-grid .green-tag.listed-hypothesis:before {
+    background-color: #A1D336; }
+  .canvas-grid .light-blue-tag.listed-hypothesis:before {
+    background-color: #6BC7FF; }
+  @media (min-width: 800px) {
+    .canvas-grid {
+      height: 530px;
+      width: 827px; }
+      .canvas-grid .cell {
+        width: 165px; }
+      .canvas-grid .horizontal-x2 {
+        width: 412.5px; }
+      .canvas-grid .col {
+        width: auto; }
+      .canvas-grid .col-x2 .cell .bottom {
+        height: 280px; }
+      .canvas-grid .col-x2, .canvas-grid .col-x2 .cell {
+        height: 352px; } }
+
+.canvas-progress-assistant {
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 2.5em;
+  width: 257px; }
+  .canvas-progress-assistant .to-do {
+    color: #29244E;
+    position: relative;
+    padding-left: 54px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    border-bottom: 2px solid #F0F0F0; }
+  .canvas-progress-assistant .to-do:last-child {
+    border-bottom: none; }
+  .canvas-progress-assistant .to-do:before {
+    content: "";
+    position: absolute;
+    background: #E8E5FF;
+    left: 16px;
+    top: 16px;
+    -moz-border-radius: 22px;
+    -webkit-border-radius: 22px;
+    border-radius: 22px;
+    height: 22px;
+    width: 22px; }
+  .canvas-progress-assistant .to-do.active:before {
+    content: "";
+    -moz-box-shadow: 0 0px 8px 0px rgba(17, 194, 11, 0.5);
+    -webkit-box-shadow: 0 0px 8px 0px rgba(17, 194, 11, 0.5);
+    box-shadow: 0 0px 8px 0px rgba(17, 194, 11, 0.5);
+    background: #11C26F;
+    top: 20px;
+    height: 1em;
+    width: 1em; }
+  .canvas-progress-assistant .top {
+    margin-bottom: 1.5em; }
+    .canvas-progress-assistant .top button, .canvas-progress-assistant .top .title {
+      display: inline-block; }
+    .canvas-progress-assistant .top .title {
+      padding-left: 10px; }
+    .canvas-progress-assistant .top .small-yellow-rounded-btn {
+      position: absolute;
+      right: 0;
+      top: 5px; }
+  .canvas-progress-assistant .up-next {
+    background: #FEFF7C; }
+  @media (min-width: 800px) {
+    .canvas-progress-assistant {
+      padding-left: 25px; } }
